--- a/docs/gitbook-demo.tex
+++ b/docs/gitbook-demo.tex
@@ -434,6 +434,8 @@ You can write citations, too. For example, we are using the \textbf{bookdown} pa
 \hypertarget{examples}{%
 \chapter{Examples}\label{examples}}
 
+If I've got this figured out, I input changes here, then some magical imp will output this to the html versions of these files via git.
+
 Here are some examples of other GitBooks for courses; if you want to have your GitBook added to the list, please send a \href{https://github.com/cjvanlissa/gitbook-demo/pulls}{Pull Request} (here's \href{https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request}{how to send a pull request}).
 
 \hypertarget{statistics-with-r-h.-quene}{%
