--- a/examples.Rmd
+++ b/examples.Rmd
@@ -2,6 +2,8 @@
 
 If I've got this figured out, I input changes here, then some magical imp will output this to the html versions of these files via git.
 
+This is very frustrating!
+
 Here are some examples of other GitBooks for courses; if you want to have your GitBook added to the list, please send a [Pull Request](https://github.com/cjvanlissa/gitbook-demo/pulls) (here's [how to send a pull request](https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request)).
 
 ## Statistics with R (H. Quene)
